Bug 1121515 - Error tapping empty listitem in a <select> box, r=roc, wesj